# limen

./: .coderabbit.yaml  .coverage  .env.example  .env.template  .gitignore  .ruff.toml  00-START-HERE-BEOWULF-FITTS-2-5.md  AGENTS.md  BACKLOG.md  BEOWULF-FITTS-2-5-MUSIC-COMPOSITION-GUIDE.md  BEOWULF-FITTS-2-5-SUMMARY.txt  BEOWULF-FITTS-2-5-VISUAL-SUMMARY.txt  BUILD-PACKET.md  CHAPTERS-5-8-RESEARCH.md  CLAUDE.md  CONSOLIDATION-EXECUTION-MANIFEST.md  CONTRIBUTING.md  DISCOVERY.md  EVERY-ASK-LEDGER.md  EXCAVATION-MAP-2026-06-25.md  FLAME.md  GEMINI.md  INDEX-BEOWULF-FITTS-2-5-COMPOSITION.md  INDEX.md  NAMING.md  PR-SUMMARY.md  QUICKSTART.md  README.md  SCHEMA.md  START-HERE.md  VENDOR-LANE-AUDIT-2026-06-19.md  beowulf-fitts-2-5-structure.json  build_peer_audited_comments.py  cloud-routines.json  experience-surfaces.json  face-ownership.json  fetch_shahnameh_full.py  fetch_shahnameh_improved.py  fetch_shahnameh_smart.py  firebase.json  (+31 more)
cli/: pyproject.toml  requirements.txt
cli/.mypy_cache/3.14/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  (+11 more)
cli/tests/: conftest.py  test_accelerator.py  test_agent_board_log_review.py  test_agent_code_review_queue.py  test_agent_instruction_docs.py  test_agent_session_full_stack_review.py  test_agy_bridge.py  test_always_working.py  test_antigravity_scratch_bridge.py  test_append_tasks.py  test_apply_ask_gate_migration.py  test_artist_validator.py  test_ask_gate_migration.py  test_async_dispatch.py  test_aug1_view.py  test_auto_scale.py  test_autonomy_governor.py  test_avtopoiesis.py  test_backblaze_exclusions.py  test_beat_sensors.py  test_bifrons_organ.py  test_board_integrity.py  test_budget_reset_heal.py  test_capacity.py  test_capacity_fill.py  test_capacity_fill_ledger.py  test_capture_divergence.py  test_cartridge_connected.py  test_cells.py  test_censor_cadence.py  test_census.py  test_check_covenant.py  test_check_fork_safety.py  test_check_main_green.py  test_check_params.py  test_check_sensors.py  test_check_test_hygiene.py  test_claim_task.py  test_claude_fleet_auth_probe.py  test_claude_no_modal_dispatch.py  (+273 more)
ianva/: .gitignore  README.md  ianva.toml  pyproject.toml  upstreams.example.json
ianva/deploy/: com.ianva.gateway.plist  docker-compose.yml
ianva/docs/: ARCHITECTURE.md  HIS-HAND.md  THREE-DISEASES.md
ianva/scripts/: ianva-serve.sh  ianva-tunnel.sh  install_agent_configs.py
mcp/: pyproject.toml
mcp/tests/: test_server.py
(+2405 files in other folders)
