[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limen"
version = "0.1.0"
description = "Universal agent task intake"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "requests>=2.31",
]

[project.scripts]
limen = "limen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
