[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limen"
version = "0.1.0"
description = "Universal agent task intake"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rfc8785==0.1.4",
]

[project.optional-dependencies]
test = [
    "jsonschema>=4.23",
    "pytest>=8.0",
    "requests>=2.31",
]

[project.scripts]
limen = "limen.cli:main"

[tool.mypy]
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
  "mesh.*",
  "anthropic",
  "conversation_corpus_engine",
  "conversation_corpus_engine.*",
  "yaml",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
