[project]
name = "ianva"
version = "0.1.0"
description = "ianva — the fleet's single MCP doorway. One gateway every agent passes through to reach all servers, holding upstream OAuth so nothing ever re-authenticates again."
readme = "README.md"
requires-python = ">=3.10"
# Runtime is intentionally stdlib-only: ianva is an ORCHESTRATOR. It supervises external
# backends (MCPHub via `npx`, sparfenyuk/mcp-proxy via `uvx`) and generates agent configs.
# Keeping it dependency-free means `python3 -c "import ianva"` and `ianva gen-configs` work
# on a bare machine with zero install friction.
dependencies = []

[project.scripts]
ianva = "ianva.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ianva"]
